fixed area overflow + minor refactoring

--- a/discope/apps/booking/src/app/in/planning/planning.component.scss
+++ b/discope/apps/booking/src/app/in/planning/planning.component.scss
@@ -2,16 +2,17 @@
 
     width: 100%;
     height: 100%;
-
     overflow: hidden;
     box-sizing: border-box;
 
     .container {
         height: 100%;
         width: 100%;
+        padding: 12px;
 
         .planning-header {
-            display: flex;
+            /*display: flex;*/
+            display: none;
             width: 100%;
             padding-left: 12px;
             height: 48px;
@@ -24,9 +25,10 @@
         .planning-body {
             /* we need a background for fullscreen mode */
             background-color: white;
-            height: calc(100vh - 123px);
+            height: calc(100vh - 90px);
             width: 100%;
             overflow: hidden;
+            border-radius: 10px;
 
             .calendar-wrapper {
                 height: 100%;
